--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,4 +7,6 @@ jobs:
       - name: Print greeting
         run: echo "Hello World"
       - name: Print goodbye
-        run: echo "Done!"
+        run: | 
+          echo "Done!"
+          echo "Done another time!"
